<resources>
    <string name="app_name">LAMB Wallet</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="url_error">请求链接不存在~</string>
    <string name="socket_time_out">请求超时,请稍后重试~</string>
    <string name="socket_exception">网络异常，请检查后重试~</string>
    <string name="error_parse">数据解析异常,请稍后重试~</string>
    <string name="dear_user">亲爱的用户</string>
    <string name="close_permisson_toast">您关闭权限申请,如需使用请重新点击.</string>
    <string name="hint_choose_wallet">请选择钱包</string>
    <string name="hint_input_wallet_name">给你的钱包命名</string>
    <string name="hint_input_password">请输入密码</string>
    <string name="hint_input_two_password">确认密码</string>
    <string name="hint_password">6-20个字符、字母、数字或符号密码</string>
    <string name="login">登录</string>
    <string name="sure">确认</string>
    <string name="cancel">取消</string>
    <string name="creat_wallet">创建钱包</string>
    <string name="import_wallet">导入钱包</string>
    <string name="file_import_wallet">配置文件导入</string>
    <string name="mnemonic_import_wallet">助记词导入</string>
    <string name="save_mnemonic_hint">请将助记词按顺序认真抄写在\n纸上之后将进行验证</string>
    <string name="check_mnemonic_hint">请单击助记词以确认您已正确备份</string>
    <string name="go_check">我已抄写完成，开始验证</string>
    <string name="mnemonic">助记词</string>
    <string name="mnmonic_error">助记词校验错误</string>
    <string name="no_mnmonic_error">请选择助记词</string>
    <string name="hint_file_info">请输入备份文件内容(*.keyinfo)</string>
    <string name="hint_mnmonic_info">助记词，用空格间隔</string>
    <string name="tab_me">我的</string>
    <string name="tab_mining">挖矿</string>
    <string name="tab_home">资产</string>
    <string name="drop_two_to_home">再按一次返回键回到桌面</string>
    <string name="amount">余额(LAMB)</string>
    <string name="award">总奖励:</string>
    <string name="transfer">转账</string>
    <string name="take_out_award">收款</string>
    <string name="exchange">兑换</string>
    <string name="no_more">- 没有更多 -</string>
    <string name="copy">复制成功</string>
    <string name="wallet_manger">管理钱包</string>
    <string name="transfer_history">交易记录</string>
    <string name="proposal">提案</string>
    <string name="settings">设置</string>
    <string name="wallet_name">钱包名</string>
    <string name="address">账户地址</string>
    <string name="back_up">备份钱包</string>
    <string name="change_chain">切换验证节点</string>
    <string name="language">语言</string>
    <string name="version">当前版本</string>
    <string name="change_wallet">切换钱包</string>
    <string name="to_address">接收方</string>
    <string name="lambda_address">lambda地址</string>
    <string name="can_use_amount">可用余额：</string>
    <string name="hint_input_amount">填写数额</string>
    <string name="memo">填写备注(可选)</string>
    <string name="hint_input_memo">在此输入备注</string>
    <string name="go_transfer">确认转账</string>
    <string name="mining_award">奖励</string>
    <string name="producer_award">节点收益</string>
    <string name="take_out_amount">提取数额</string>
    <string name="toast_mining_award">*一次只能从5个验证节点中提取奖励</string>
    <string name="go_award">确认提取</string>
    <string name="lamb_exchange">LAMB兑换TBB</string>
    <string name="tbb_exchange">TBB兑换LAMB</string>
    <string name="amount_lamb">金额（LAMB）</string>
    <string name="amount_tbb">金额（TBB）</string>
    <string name="go_exchange">确认兑换</string>
    <string name="store_mining">存储质押</string>
    <string name="store_market">存储市场</string>
    <string name="producer_list">请选择以下节点质押TBB挖矿</string>
    <string name="my_zhiya">我的质押</string>
    <string name="cancel_zhiya">解绑中</string>
    <string name="producer_details">验证节点详情</string>
    <string name="one_step_buy">一键购买</string>
    <string name="space">空间(GB)</string>
    <string name="time">时长(月)</string>
    <string name="buy">购买</string>
    <string name="other_buy">自选交易</string>
    <string name="my_order">我的订单</string>
    <string name="hint_space">请输入空间数量</string>
    <string name="hint_time">请输入购买时长</string>
    <string name="sure_pay">立即支付</string>
    <string name="buy_space">购买空间</string>
    <string name="no_data">暂无数据</string>
    <string name="make_collection">收款</string>
    <string name="sender">发送方</string>
    <string name="receiver">接收方</string>
    <string name="amount_tbb_zhiya">金额(TBB)</string>
    <string name="toast_no_exchange_tbb">请输入需要兑换的TBB</string>
    <string name="toast_no_exchange_lamb">请输入需要兑换的TBB</string>
    <string name="toast_error_tbb">请输入有效的数值</string>
    <string name="toast_no_tbb_int">兑换的TBB必须为整数</string>
    <string name="toast_no_receiver">请输入接收方的地址</string>
    <string name="toast_no_amount">请输入金额</string>
    <string name="balance_no_enough">余额不足</string>
    <string name="toast_error_to_yourself">不支持转账给本人</string>
    <string name="toast_error_lambda">地址错误</string>
    <string name="wallet_password">钱包密码</string>
    <string name="hint_wallet_password">请输入钱包密码</string>
    <string name="gas_fee">GAS费用(LAMB)：</string>
    <string name="can_get_award_lamb">可提取奖励(LAMB)</string>
    <string name="zhiya_all_amount">质押总量(TBB)</string>
    <string name="zhiya_details">质押详情</string>
    <string name="take_out_zhiya_award">提取奖励</string>
    <string name="close">关闭</string>
    <string name="zhiya">质押</string>
    <string name="transaction_storage_capacity">成交存储容量</string>
    <string name="order_details">交易详情</string>
    <string name="producer_url">节点地址</string>
    <string name="producer_ip">请输入节点IP</string>
    <string name="producer_port">端口号</string>
    <string name="turn_the_pledge">转质押</string>
    <string name="toast_choose_producer">请选择转质押的节点</string>
    <string name="choose_idea">选择观点</string>
    <string name="yes">同意</string>
    <string name="no">反对</string>
    <string name="no_with_veto">强烈反对</string>
    <string name="abstain">弃权</string>
    <string name="toast_choose_idea">质押量为投票的权重.如果没有质押，投票权重为0</string>
    <string name="cancel_the_pledge">取消质押</string>
    <string name="market_name">市场名称：</string>
    <string name="market_address">市场地址：</string>
    <string name="miners_address">矿工地址：</string>
    <string name="min_buy_space">最小购买空间：</string>
    <string name="min_buy_time">最短购买时长：</string>
    <string name="max_buy_time">最大购买时长：</string>
    <string name="rate">赔 率：</string>
    <string name="sellSize">空间总量：</string>
    <string name="unUseSize">空间剩余量：</string>
    <string name="price">单 价：</string>
    <string name="pay_token">支付金额：</string>
    <string name="sure_pay_token">应付金额：</string>
    <string name="copy_success">复制成功</string>
    <string name="qr_code">扫一扫</string>
    <string name="photo_album">相册</string>
    <string name="input_amount">金额(LAMB)</string>
    <string name="cash_pledge_attention">注意事项:\n当投票阶段结束的时候,提案判定为通过，则立即返还众筹到的提案资金.注意：可能会造成众筹的押金被没收的情况(提案创建开始14天之后)\n1:存入押金阶段结束的时候，提案仍然没有存够 10000 Lamb \n2:投票阶段结束的时候，投票数少于全网 40% 质押量 \n3:投票阶段结束的时候，大于 33.4% 的强烈反对票</string>
    <string name="main_url">主网默认节点</string>
    <string name="test_url">测试网默认节点</string>
    <string name="loosen_the_refresh">松开刷新</string>
    <string name="pull_down_refresh">下拉刷新</string>
    <string name="refreshing">正在刷新</string>
    <string name="exchange_attention">特别注意: \n1:LAMB:TBB=3000:1且TBB必须为整数 \n2:只有使用LAMB兑换的TBB才可以兑换回LAMB \n3:LAMB兑换生成的TBB是根据您的Lambda钱包私钥确认 \n4:TBB转账无法转移TBB兑回LAMB的权益。</string>
    <string name="sell_order">卖单</string>
    <string name="buy_order">买单</string>
    <string name="active">活跃</string>
    <string name="done">完成</string>
    <string name="toast_no_space">请输入空间数量</string>
    <string name="toast_mo_time">请输入购买时长</string>
    <string name="old_producer">旧节点</string>
    <string name="new_producer">转质押节点</string>
    <string name="hint_new_producer">请选择转质押的节点</string>
    <string name="input_amount_tbb">金额(TBB)</string>
    <string name="zhuan_zhiya_attention">特别注意：\n1:21.00天内只能转质押7笔,且不能从新节点再转出\n2:转质押周期内，原节点被惩罚了，转质押的币仍会按照惩罚比例进行扣除</string>
    <string name="all_zhiya_amount">质押金额:</string>
    <string name="cancel_zhiya_attention">特别注意：\n1:21.00天内只能取消质押7笔 ,取消质押后将不再发放奖励\n2:解除质押周期内，节点被惩罚了，解除质押的币也会按照惩罚比例进行扣除\n3:解质押等待时间:21.00天，期间不发放收益</string>
    <string name="store_type">类型：</string>
    <string name="order_status">状态：</string>
    <string name="user">用户：</string>
    <string name="order_id">订单ID：</string>
    <string name="space_no_gb">空间：</string>
    <string name="start_time">开始时间：</string>
    <string name="end_time">结束时间：</string>
    <string name="shebei">存储设备：</string>
    <string name="peifu_amount">未提取的订单赔付金：</string>
    <string name="order_amount">订单金额：</string>
    <string name="toast_no_password">请输入您的钱包密码</string>
    <string name="error_application">应该首先初始化</string>
    <string name="choose_token">选择币种</string>
    <string name="save_qr_code">保存二维码到相册</string>
    <string name="go_copy">复制</string>
    <string name="make_collection_attation">特别注意:\n1:请使用LAMB Wallet 扫码进行转账\n2:该二维码暂不支持非LAMB Wallet 扫描</string>
    <string name="toast_file_info">请输入备份文件内容</string>
    <string name="toast_no_wallet_name">请输入钱包名</string>
    <string name="toast_error_file_info">备份文件内容有误，请核对后再次输入。</string>
    <string name="toast_rerror_password">密码错误，请核对后再次输入。</string>
    <string name="toast_wallet_exit">该钱包已存在</string>
    <string name="toast_no_wallet">本地暂无钱包</string>
    <string name="toast_no_choose_wallet">暂未选择钱包</string>
    <string name="toast_no_two_password">请再次确认密码</string>
    <string name="toast_rex_password">请设置6-20位，并且由字母，数字和符号两种以上组合的密码</string>
    <string name="toast_error_two_password">两次密码不一致</string>
    <string name="check_success">校验成功</string>
    <string name="toast_no_mnemonic">请输入助记词</string>
    <string name="toast_error_mnemonic">助记词错误，请核对后再次输入</string>
    <string name="send_qr_code_toast">将二维码放入框内,即可自动扫描</string>
    <string name="WRITE_EXTERNAL_STORAGE">写入存储卡</string>
    <string name="READ_EXTERNAL_STORAGE">读取存储卡</string>
    <string name="toast_storage">请开启存储读写权限  浏览图库</string>
    <string name="normal">正常</string>
    <string name="in_prison">被监禁</string>
    <string name="voting_weight">投票权重:</string>
    <string name="price_lamb_gb_month">单价(LAMB/GB/month):</string>
    <string name="order_selled">该单已卖完啦~</string>
    <string name="sendd_to">发送到</string>
    <string name="get_from">接收自</string>
    <string name="success">成功</string>
    <string name="fail">失败</string>
    <string name="complete">预计完成</string>
    <string name="seller">卖</string>
    <string name="seller_space_gb">出售空间(GB)</string>
    <string name="get_amount_lamb">获得数额(LAMB)</string>
    <string name="buy1">买</string>
    <string name="buy_space_gb">购买空间(GB)</string>
    <string name="par_amount_lamb">支付数额(LAMB)</string>
    <string name="rejected">未通过</string>
    <string name="passed">通过</string>
    <string name="depositPeriod">押金阶段</string>
    <string name="voting_period">投票阶段</string>
    <string name="month">月</string>
    <string name="toast_no_time">请输入购买时长</string>
    <string name="proposal1">提案：</string>
    <string name="status1">状态：</string>
    <string name="id1">编号：</string>
    <string name="endd_time1">提案时间：</string>
    <string name="end_time2">押金结束时间：</string>
    <string name="need_wmount">需要押金：</string>
    <string name="have_amount">已存押金：</string>
    <string name="my_amount">我存的押金：</string>
    <string name="my_voter">我的投票：</string>
    <string name="all_voter">投票总量：</string>
    <string name="yes1">同意：</string>
    <string name="no1">反对：</string>
    <string name="no_with_veto1">强烈反对：</string>
    <string name="abstain1">弃权：</string>
    <string name="type1">类型：</string>
    <string name="amount1">金额：</string>
    <string name="node_name">节点昵称：</string>
    <string name="my_pledge">我的质押：</string>
    <string name="my_award">我的奖励：</string>
    <string name="pledge_addrsss">质押地址：</string>
    <string name="desc">简   介：</string>
    <string name="node_award">节点收益：</string>
    <string name="max_award">最大收益：</string>
    <string name="max_award_change">最大收益变化：</string>
    <string name="vote_weight">投票权重：</string>
    <string name="pledge_tbb">TBB质押挖矿</string>
    <string name="change_pledge">转质押</string>
    <string name="cancel_pledge">取消质押</string>
</resources>