<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_confirm"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimens_20"
            android:layout_marginRight="@dimen/dimens_20"
            android:layout_marginTop="@dimen/dimens_20"
            android:text="@string/wallet_password"
            android:textColor="@color/txt_color"
            android:textSize="@dimen/dimens_13"/>

        <com.lambda.wallet.view.ClearEditText
            android:id="@+id/dialog_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_60"
            android:layout_marginLeft="@dimen/dimens_20"
            android:layout_marginRight="@dimen/dimens_20"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/hint_wallet_password"
            android:inputType="textPassword"
            android:textColor="@color/title_color"
            android:textColorHint="@color/gray_color"
            android:textCursorDrawable="@drawable/edittext_cursor"
            android:textSize="@dimen/dimens_16"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimens_20"
            android:layout_marginLeft="@dimen/dimens_20"
            android:layout_marginRight="@dimen/dimens_20"
            android:background="@color/bg_color"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="@dimen/dimens_10"
                android:padding="@dimen/dimens_10"
                android:text="@string/gas_fee"
                android:textColor="@color/txt_color"
                android:textSize="@dimen/dimens_12"/>

            <TextView
                android:id="@+id/gas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:lineSpacingExtra="@dimen/dimens_10"
                android:padding="@dimen/dimens_10"
                android:text="@string/app_name"
                android:textColor="@color/money_color"
                android:textSize="@dimen/dimens_12"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dimens_50"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dialog_confirm_cancle"
                android:layout_width="@dimen/dimens_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/gray_color"
                android:textSize="@dimen/dimens_16"/>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/line"/>

            <TextView
                android:id="@+id/dialog_confirm_sure"
                android:layout_width="@dimen/dimens_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/sure"
                android:textColor="#4D7BFE"
                android:textSize="@dimen/dimens_16"/>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>